Description
This patch adds the ability to show the Customize Notifications dialog. I know gonzoMD was working adding missing dialogs and at least making them show. A few things with this patch:
When clicking the button, nothing happens. However, the code I wrote works (I've tested this by replacing other dialog buttons code with the new call and it worked fine). So it's something with the button and not the code.Fixed- The header in notifyiconscust.cpp might need a bit of work. I'm not sure who else should go in there as this is the first time I've ever written a file that deals with code.
I've tested building this with GCC.
I hope I didn't step on anyone's toes or anything. Just had some free time and wanted to help. ![]()