[EXPLORER] Stubplement Customize Notifications dialog. Patch by Jared Smudde. CORE-10725

svn path=/trunk/; revision=70703