reactos/base/shell/explorer/trayprop.cpp
@@ -234,6 +234,9 @@ TaskbarPageProc(HWND hwndDlg,
                         PropSheet_Changed(GetParent(hwndDlg), hwndDlg);
                     }
                     break;
+                case IDC_TASKBARPROP_ICONCUST:
+                    ShowCustomizeNotifyIcons(hExplorerInstance, hwndDlg);
+                    break;
             }
             break;
 
